03-services/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v1.0.0
spec:
  selector:
    matchLabels:
      app: frontend
      version: v1.0.0
  template:
    metadata:
      labels:
        app: frontend
        version: v1.0.0
    spec:
      containers:
      - name: nginx
        image: shadjachaudhari/nginx:v1.0.0
        command: ["/bin/sh"]
        args: ["-c", "./env.sh > /usr/share/nginx/html/env.js && nginx -g 'daemon off;' "]
# ---
# service matches labels for all pods, with/without deployment
apiVersion: v1
kind: Pod 
metadata:
 name: nginx
 labels:
   app: frontend
spec:
  terminationGracePeriodSeconds: 0
  containers:
  #- name: container-name
  - name: nginx
    image: nginx:1.16-alpine
