03-services/pod_to_pod.yaml
# apiVersion: v1
# kind: Namespace
# metadata:
#     name: client
# # one deployment object corresponds to one podSpec object
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: nginx
spec:
 selector:
   matchLabels:
     app: nginx
 template:
   metadata:
     labels:
       app: nginx
   spec:
     containers:
     - name: nginx
       image: nginx:1.17-alpine
       ports:
       - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  #namespace: client
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: nginx:1.17-alpine
        ports:
        - containerPort: 80
