03-services/service.yaml
apiVersion: v1
kind: Service
metadata:
  #name: service-name-frontend
  name: ui
spec:
  #type: NodePort
  selector:
    #pod-label-key-app: pod-label-value-frontend
    app: frontend # deploy v1 and v2 for canary release
    #version: v2.0.0
  ports:
    - protocol: TCP
      port: 80
